--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
                     inside companies.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="#contact"
+                    <a href ="#contact"
                         class="inline-flex items-center justify-center px-8 py-3 bg-brand-primary text-white text-sm font-semibold rounded-sm shadow-soft hover:bg-teal-900 transition-all duration-300">
                         Initiate Institutional Dialogue
                     </a>
-                    <a href="#methodology"
+                    <a href="programs.html"
                         class="inline-flex items-center justify-center px-8 py-3 bg-white border border-slate-300 text-slate-700 text-sm font-semibold rounded-sm shadow-sm hover:bg-slate-50 transition-all duration-300">
                         View Program Framework
                     </a>
