--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     inside companies.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href ="#contact"
+                    <a href="#contact"
                         class="inline-flex items-center justify-center px-8 py-3 bg-brand-primary text-white text-sm font-semibold rounded-sm shadow-soft hover:bg-teal-900 transition-all duration-300">
                         Initiate Institutional Dialogue
                     </a>
@@ -165,101 +165,162 @@
     <!-- Section: The Problem -->
     <section id="problem" class="py-20 bg-brand-bg border-y border-slate-100">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-16">
-                <h2 class="font-serif text-3xl font-bold text-brand-dark mb-4">The Problem</h2>
+
+            <!-- Heading -->
+            <div class="text-center mb-12">
+                <h2 class="font-serif text-3xl font-bold text-brand-dark">
+                    The Gap Between College & Corporate Reality
+                </h2>
             </div>
-            <div class="flex flex-col gap-8 max-w-2xl mx-auto pb-20">
-                <!-- Block 1 -->
-                <div class="sticky top-24 bg-white p-8 rounded-lg border border-slate-200 shadow-card z-10">
-                    <h3 class="font-bold text-xl text-brand-primary mb-3">Academic Excellence</h3>
-                    <p class="text-slate-600">Graduates perform well academically, demonstrating strong theoretical
-                        knowledge and exam performance.</p>
-                </div>
-                <!-- Block 2 -->
-                <div class="sticky top-28 bg-brand-primary p-8 rounded-lg border border-brand-primary shadow-card z-20">
-                    <h3 class="font-bold text-xl text-white mb-3">First-Year Struggle</h3>
-                    <p class="text-teal-50">Despite good grades, many struggle in their first year of work due to lack
-                        of practical exposure.</p>
-                </div>
-                <!-- Block 3 -->
-                <div class="sticky top-32 bg-white p-8 rounded-lg border border-slate-200 shadow-card z-30">
-                    <h3 class="font-bold text-xl text-brand-primary mb-3">Execution Readiness Gap</h3>
-                    <p class="text-slate-600">Employers report significant gaps in execution readiness, requiring
-                        extensive retraining.</p>
-                </div>
-                <!-- Block 4 -->
-                <div class="sticky top-36 bg-brand-primary p-8 rounded-lg border border-brand-primary shadow-card z-40">
-                    <h3 class="font-bold text-xl text-white mb-3">Institutional Accountability</h3>
-                    <p class="text-teal-50">Universities are increasingly judged by workplace outcomes rather than
-                        just academic results.</p>
-                </div>
+
+            <!-- Problem Card -->
+            <div class="max-w-4xl mx-auto bg-white border border-slate-200 rounded-xl shadow-card p-10">
+
+                <ul class="space-y-6">
+
+                    <li class="flex items-start gap-4">
+                        <span class="text-red-500 text-xl mt-1">✕</span>
+                        <div>
+                            <h3 class="font-semibold text-slate-800">
+                                Academic Excellence
+                            </h3>
+                            <p class="text-slate-600">
+                                Graduates perform well academically, demonstrating strong theoretical knowledge and exam
+                                performance.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="flex items-start gap-4">
+                        <span class="text-red-500 text-xl mt-1">✕</span>
+                        <div>
+                            <h3 class="font-semibold text-slate-800">
+                                First-Year Struggle
+                            </h3>
+                            <p class="text-slate-600">
+                                Despite good grades, many struggle in their first year of work due to lack of practical
+                                exposure.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="flex items-start gap-4">
+                        <span class="text-red-500 text-xl mt-1">✕</span>
+                        <div>
+                            <h3 class="font-semibold text-slate-800">
+                                Execution Readiness Gap
+                            </h3>
+                            <p class="text-slate-600">
+                                Employers report significant gaps in execution readiness, requiring extensive
+                                retraining.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="flex items-start gap-4">
+                        <span class="text-red-500 text-xl mt-1">✕</span>
+                        <div>
+                            <h3 class="font-semibold text-slate-800">
+                                Institutional Accountability
+                            </h3>
+                            <p class="text-slate-600">
+                                Universities are increasingly judged by workplace outcomes rather than just academic
+                                results.
+                            </p>
+                        </div>
+                    </li>
+
+                </ul>
+
             </div>
         </div>
     </section>
 
+
     <!-- The Gap Analysis -->
     <section id="gap" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+
             <div class="text-center mb-16">
-                <h2 class="font-serif text-3xl font-bold text-brand-dark mb-4">The Gap</h2>
+                <h2 class="font-serif text-3xl font-bold text-brand-dark mb-4">
+                    The Gap
+                </h2>
             </div>
 
             <div class="grid md:grid-cols-12 gap-8 items-center">
 
-                <!-- Academic Reality (Left) -->
+                <!-- Academic Reality -->
                 <div
                     class="md:col-span-5 bg-slate-50 p-8 rounded-sm border border-slate-200 animate-on-scroll opacity-0 delay-100">
+
                     <div class="flex items-center gap-3 mb-6">
                         <i class="fa-solid fa-graduation-cap text-2xl text-slate-400"></i>
                         <h3 class="font-bold text-slate-700">Academic Reality</h3>
                     </div>
-                    <ul class="space-y-4">
+
+                    <ul class="space-y-6">
                         <li class="flex items-start gap-3">
-                            <i class="fa-solid fa-code text-sm mt-1 text-slate-400"></i>
-                            <span class="text-sm text-slate-600">Academia teaches what to build</span>
+                            <i class="fa-solid fa-dot-circle text-sm mt-1 text-slate-400"></i>
+                            <span class="text-sm text-slate-600">
+                                Academia teaches what to build
+                            </span>
                         </li>
+
                         <li class="flex items-start gap-3">
-                            <i class="fa-solid fa-file-pen text-sm mt-1 text-slate-400"></i>
-                            <span class="text-sm text-slate-600">Academic tasks have clear instructions</span>
+                            <i class="fa-solid fa-dot-circle text-sm mt-1 text-slate-400"></i>
+                            <span class="text-sm text-slate-600">
+                                Academic tasks have clear instructions
+                            </span>
                         </li>
+
                         <li class="flex items-start gap-3">
-                            <i class="fa-solid fa-user text-sm mt-1 text-slate-400"></i>
-                            <span class="text-sm text-slate-600">Academic work ends at submission</span>
+                            <i class="fa-solid fa-dot-circle text-sm mt-1 text-slate-400"></i>
+                            <span class="text-sm text-slate-600">
+                                Academic work ends at submission
+                            </span>
                         </li>
                     </ul>
                 </div>
 
-                <!-- The Bridge Icon -->
-                <div class="md:col-span-2 flex justify-center py-4 md:py-0 animate-on-scroll opacity-0 delay-200">
+                <!-- Bridge -->
+                <div class="md:col-span-2 flex justify-center animate-on-scroll opacity-0 delay-200">
                     <div
                         class="w-12 h-12 rounded-full bg-brand-primary/10 flex items-center justify-center text-brand-primary">
-                        <i class="fa-solid fa-arrow-right-long md:hidden"></i>
-                        <i class="fa-solid fa-arrow-right-long hidden md:block text-2xl"></i>
+                        <i class="fa-solid fa-arrow-right-long text-2xl"></i>
                     </div>
                 </div>
 
-                <!-- Industry Expectation (Right) -->
+                <!-- Industry Expectation -->
                 <div
                     class="md:col-span-5 bg-brand-primary text-white p-8 rounded-sm shadow-lg relative overflow-hidden animate-on-scroll opacity-0 delay-300">
-                    <!-- Subtle background decoration -->
+
                     <i class="fa-solid fa-building absolute -bottom-4 -right-4 text-9xl text-teal-700 opacity-20"></i>
 
                     <div class="flex items-center gap-3 mb-6 relative z-10">
                         <i class="fa-solid fa-briefcase text-2xl text-teal-200"></i>
                         <h3 class="font-bold text-white">Industry Expectation</h3>
                     </div>
-                    <ul class="space-y-4 relative z-10">
+
+                    <ul class="space-y-6 relative z-10">
                         <li class="flex items-start gap-3">
                             <i class="fa-solid fa-check text-sm mt-1 text-teal-300"></i>
-                            <span class="text-sm text-teal-50">Industry expects how to deliver</span>
+                            <span class="text-sm text-teal-50">
+                                Industry expects how to deliver
+                            </span>
                         </li>
+
                         <li class="flex items-start gap-3">
                             <i class="fa-solid fa-check text-sm mt-1 text-teal-300"></i>
-                            <span class="text-sm text-teal-50">Real projects start with uncertainty</span>
+                            <span class="text-sm text-teal-50">
+                                Real projects start with uncertainty
+                            </span>
                         </li>
+
                         <li class="flex items-start gap-3">
                             <i class="fa-solid fa-check text-sm mt-1 text-teal-300"></i>
-                            <span class="text-sm text-teal-50">Industry work continues after delivery</span>
+                            <span class="text-sm text-teal-50">
+                                Industry work continues after delivery
+                            </span>
                         </li>
                     </ul>
                 </div>
@@ -267,6 +328,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- The Solution -->
     <section id="solution" class="py-20 bg-brand-bg">
@@ -340,43 +402,96 @@
     <!-- Program Formats -->
     <section id="programs" class="py-20 bg-brand-bg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="font-serif text-3xl font-bold text-brand-dark text-center mb-12">Program Formats</h2>
+            <h2 class="font-serif text-3xl font-bold text-brand-dark text-center mb-12">
+                Program Formats
+            </h2>
+
             <div class="grid md:grid-cols-2 gap-8">
+
                 <!-- Card 1 -->
                 <div
                     class="bg-white p-8 rounded-sm border border-slate-200 shadow-md animate-on-scroll opacity-0 delay-100">
-                    <h3 class="font-bold text-xl text-brand-primary mb-2">Industry Reality Session</h3>
-                    <p class="text-sm font-semibold text-slate-500 uppercase tracking-wide mb-4">Duration: 2 Hours</p>
+
+                    <h3 class="font-bold text-xl text-brand-primary mb-2">
+                        Industry Immersion Program
+                    </h3>
+
+                    <p class="text-sm text-slate-600 mb-1">
+                        From Classroom Learning to Global IT Delivery
+                    </p>
+
+                    <p class="text-sm font-semibold text-slate-500 uppercase tracking-wide mb-4">
+                        Duration: 3–5 Days
+                    </p>
+
+                    <p class="font-semibold text-slate-700 mb-3">
+                        What students will experience:
+                    </p>
+
                     <ul class="space-y-2 mb-6 text-slate-600 list-disc list-inside">
-                        <li>Project initiation and approvals</li>
-                        <li>Architecture thinking</li>
-                        <li>Team collaboration dynamics</li>
+                        <li>End-to-end project lifecycle (real scenarios)</li>
+                        <li>Architecture & estimation realities</li>
+                        <li>Corporate communication & ownership</li>
+                        <li>Career mistakes & survival strategies</li>
+                        <li>Live project simulation + Q&A</li>
                     </ul>
-                    <div class="bg-slate-50 p-4 rounded-sm border-l-4 border-brand-accent">
-                        <span class="font-bold text-slate-800">Outcome:</span> Clarity on end-to-end industry
-                        functioning
-                    </div>
+
+                    <p class="text-sm text-slate-500 mb-4 italic">
+                        Dexpo – An Enterprise Import/Export Business Operations Platform
+                    </p>
+
+                    <p class="font-semibold text-slate-700 mb-2">Ideal for:</p>
+                    <ul class="space-y-1 mb-6 text-slate-600 list-disc list-inside">
+                        <li>Final-year & pre-final year students</li>
+                        <li>Career readiness programs</li>
+                        <li>Industry orientation initiatives</li>
+                    </ul>
+
+                    <a href="programs.html"
+                        class="block w-full text-center px-6 py-3 bg-green-600 text-white font-bold text-sm rounded-sm shadow-sm hover:bg-green-700 transition-all duration-300">
+                        Know More About The Project
+                    </a>
                 </div>
+
                 <!-- Card 2 -->
                 <div
                     class="bg-white p-8 rounded-sm border border-slate-200 shadow-md animate-on-scroll opacity-0 delay-300">
-                    <h3 class="font-bold text-xl text-brand-primary mb-2">Industry Immersion Workshop</h3>
-                    <p class="text-sm font-semibold text-slate-500 uppercase tracking-wide mb-4">Duration: 3–5 Days</p>
+
+                    <h3 class="font-bold text-xl text-brand-primary mb-2">
+                        Industry Reality & Readiness Session
+                    </h3>
+
+                    <p class="text-sm text-slate-600 mb-1">
+                        Decoding Enterprise Software Delivery Beyond the Classroom
+                    </p>
+
+                    <p class="text-sm font-semibold text-slate-500 uppercase tracking-wide mb-4">
+                        Duration: 2 Hours
+                    </p>
+
+                    <p class="font-semibold text-slate-700 mb-3">
+                        What students will understand:
+                    </p>
+
                     <ul class="space-y-2 mb-6 text-slate-600 list-disc list-inside">
-                        <li>Planning through execution</li>
-                        <li>Requirement finalization</li>
-                        <li>Iterations and post-delivery work</li>
+                        <li>How IT projects are born & executed</li>
+                        <li>Why classroom learning is insufficient alone</li>
+                        <li>How companies evaluate freshers</li>
+                        <li>What mindset helps survive & grow</li>
                     </ul>
-                    <p class="text-sm text-slate-500 mb-4 italic">Example: Enterprise Import/Export Business Management
-                        app</p>
-                    <div class="bg-slate-50 p-4 rounded-sm border-l-4 border-brand-accent">
-                        <span class="font-bold text-slate-800">Outcome:</span> Insight into real delivery and execution
-                        expectations
-                    </div>
+
+                    <p class="font-semibold text-slate-700 mb-2">Ideal for:</p>
+                    <ul class="space-y-1 text-slate-600 list-disc list-inside">
+                        <li>Final-year students</li>
+                        <li>Placement batches</li>
+                        <li>Early awareness programs</li>
+                    </ul>
                 </div>
+
             </div>
         </div>
     </section>
+
 
     <!-- Who Leads & Governance -->
     <section id="governance" class="py-20 bg-slate-900 text-white relative overflow-hidden">
