--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="description"
         content="Bridging the gap between academic theory and industrial reality through executive-led mentorship.">
 
-    <!-- Fonts: Inter for clean UI, Playfair Display for authoritative headings -->
+    <!-- Fonts: Inter and IBM Plex Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,600;0,700;1,600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
         rel="stylesheet">
 
     <!-- Tailwind CSS (CDN for standalone file) -->
@@ -34,7 +34,7 @@
                     },
                     fontFamily: {
                         sans: ['Inter', 'sans-serif'],
-                        serif: ['Playfair Display', 'serif'],
+                        serif: ['IBM Plex Sans', 'sans-serif'],
                     },
                     boxShadow: {
                         'soft': '0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03)',
@@ -104,25 +104,20 @@
     <nav class="w-full bg-white/90 backdrop-blur-md border-b border-slate-200 fixed top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-20">
-                <div class="flex items-center gap-3">
+                <a href="index.html"><div class="flex items-center gap-3">
                     <div class="w-8 h-8 bg-brand-primary rounded-sm flex items-center justify-center text-white">
                         <i class="fa-solid fa-landmark"></i>
                     </div>
-                    <span class="font-serif text-xl font-bold text-slate-800 tracking-tight">Xaltiq <span
-                            class="text-brand-primary">Technologies</span></span>
-                </div>
+                    <span class="font-serif text-xl font-bold text-slate-800 tracking-tight">Campus To <span
+                            class="text-brand-primary">Corporate</span></span>
+                </div></a>
                 <div class="hidden md:flex space-x-8 text-sm font-medium text-slate-600">
-                    <a href="#campus-to-corporate" class="hover:text-brand-primary transition-colors">Campus to
-                        Corporate</a>
                     <a href="#problem" class="hover:text-brand-primary transition-colors">The Problem</a>
                     <a href="#solution" class="hover:text-brand-primary transition-colors">Solution</a>
                     <a href="#programs" class="hover:text-brand-primary transition-colors">Programs</a>
-                    <a href="#contact" class="hover:text-brand-primary transition-colors">Contact</a>
+                    <a href="contact.html" class="hover:text-brand-primary transition-colors">Contact</a>
                 </div>
-                <a href="#contact"
-                    class="hidden md:inline-flex items-center justify-center px-6 py-2 border border-brand-primary text-brand-primary text-sm font-medium rounded-sm hover:bg-brand-primary hover:text-white transition-all duration-300">
-                    Partner Access
-                </a>
+                
             </div>
         </div>
     </nav>
@@ -658,18 +653,19 @@
                 <div class="w-6 h-6 bg-slate-800 rounded-sm flex items-center justify-center text-white text-xs">
                     <i class="fa-solid fa-landmark"></i>
                 </div>
-                <span class="font-serif font-bold text-slate-800">Xaltiq <span
-                        class="text-brand-primary">Technologies</span></span>
+                <span class="font-serif font-bold text-slate-800">Campus To <span
+                        class="text-brand-primary">Corporate</span></span>
             </div>
 
             <div class="text-slate-500 text-sm">
-                &copy; 2025. Built with Xaltiq Technologies
+                &copy; 2025. Built with Campus To Corporate
             </div>
 
             <div class="flex gap-6">
-                <a href="#" class="text-slate-400 hover:text-brand-primary transition-colors"><i
+                <a href="https://www.linkedin.com/in/ankitgdotin/" class="text-slate-400 hover:text-brand-primary transition-colors"><i
                         class="fa-brands fa-linkedin text-xl"></i></a>
-                <a href="#" class="text-slate-400 hover:text-brand-primary transition-colors"><i
+                <a href="mailto:initiative@xaltiq.com"
+                    class="text-slate-400 hover:text-brand-primary transition-colors"><i
                         class="fa-solid fa-envelope text-xl"></i></a>
             </div>
         </div>
