--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/jpeg" href="/images/channels4_profile.jpg">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strategic Industry Alliance | Institutional Partnership</title>
     <meta name="description"
