--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,10 @@
     <!-- Fonts: Inter for clean UI, IBM Plex Sans for headings -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=IBM+Plex+Sans:wght@400;500;600;700&display=swap"
-        rel="stylesheet">
+   <link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+  rel="stylesheet">
+
 
     <!-- Tailwind CSS (CDN for standalone file) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -22,28 +23,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'brand-dark': '#0f172a',
-                        'brand-primary': '#115e59',
-                        'brand-accent': '#b45309',
-                        'brand-bg': '#f8fafc',
-                        'brand-surface': '#ffffff',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        serif: ['IBM Plex Sans', 'sans-serif'],
-                    },
-                    boxShadow: {
-                        'soft': '0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03)',
-                        'card': '0 10px 15px -3px rgba(0, 0, 0, 0.05), 0 4px 6px -2px rgba(0, 0, 0, 0.025)',
-                    }
-                }
-            }
-        }
-    </script>
+tailwind.config = {
+theme: {
+extend: {
+colors: {
+'brand-dark': '#0b1220',
+'brand-primary': '#0b5ed7',
+'brand-accent': '#0d6efd',
+'brand-bg': '#f8fafc',
+'brand-surface': '#ffffff',
+},
+fontFamily: {
+sans: ['Inter', 'sans-serif'],
+serif: ['Inter', 'sans-serif'],
+}
+}
+}
+}
+</script>
     <style>
         .bg-grid-pattern {
             background-image: radial-gradient(#cbd5e1 1px, transparent 1px);
@@ -51,9 +48,8 @@
         }
 
         .hero-gradient {
-            background: linear-gradient(135deg, #f0fdfa 0%, #f8fafc 100%);
-        }
-
+background: linear-gradient(135deg, #0b1220 0%, #0b5ed7 100%);
+}
         .opacity-0 {
             opacity: 0;
         }
@@ -96,11 +92,9 @@
 
         /* Form focus styles */
         .form-input:focus {
-            outline: none;
-            border-color: #115e59;
-            box-shadow: 0 0 0 3px rgba(17, 94, 89, 0.1);
-        }
-
+border-color: #0b5ed7;
+box-shadow: 0 0 0 3px rgba(11, 94, 215, 0.15);
+}
         /* Success animation */
         @keyframes successPulse {
 
@@ -120,8 +114,7 @@
     </style>
 </head>
 
-<body class="bg-brand-bg text-slate-700 font-sans antialiased selection:bg-brand-primary selection:text-white">
-
+<body class="bg-brand-bg text-slate-700 font-sans antialiased">
     <!-- Navigation -->
     <nav class="w-full bg-white/90 backdrop-blur-md border-b border-slate-200 fixed top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -177,10 +170,12 @@
                     class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-teal-50 border border-teal-100 text-brand-primary text-xs font-semibold uppercase tracking-wider mb-6">
                     <i class="fa-solid fa-paper-plane"></i> Let's Connect
                 </div>
-                <h1 class="font-serif text-4xl lg:text-6xl font-bold text-brand-dark leading-tight mb-6">
+                <h1 class="font-serif text-4xl lg:text-6xl font-bold text-white leading-tight mb-6">
+
                     Contact Us
                 </h1>
-                <p class="text-lg text-slate-600 mb-8 leading-relaxed max-w-3xl mx-auto">
+                <p class="text-lg text-slate-200 mb-8 leading-relaxed max-w-3xl mx-auto">
+
                     Ready to bring real-world industry readiness to your institution? We're here to discuss how our
                     programs can transform your students' career trajectories.
                 </p>
