--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap"
-        rel="stylesheet">
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+  rel="stylesheet">
+
 
     <!-- Tailwind CSS (CDN for standalone file) -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,28 +25,29 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'brand-dark': '#0f172a', /* Deep Slate - Stability */
-                        'brand-primary': '#115e59', /* Deep Teal - Trust/Academia */
-                        'brand-accent': '#b45309', /* Muted Amber - Restrained Action */
-                        'brand-bg': '#f8fafc', /* Cool White */
-                        'brand-surface': '#ffffff',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                        serif: ['IBM Plex Sans', 'sans-serif'],
-                    },
-                    boxShadow: {
-                        'soft': '0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03)',
-                        'card': '0 10px 15px -3px rgba(0, 0, 0, 0.05), 0 4px 6px -2px rgba(0, 0, 0, 0.025)',
-                    }
-                }
-            }
-        }
-    </script>
+tailwind.config = {
+theme: {
+extend: {
+colors: {
+/* Xaltiq primary theme colors (matched from reference images) */
+'brand-dark': '#0b1220',
+'brand-primary': '#0b5ed7',
+'brand-accent': '#0d6efd',
+'brand-bg': '#f8fafc',
+'brand-surface': '#ffffff',
+},
+fontFamily: {
+sans: ['Inter', 'sans-serif'],
+serif: ['Inter', 'sans-serif'],
+},
+boxShadow: {
+'soft': '0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03)',
+'card': '0 10px 15px -3px rgba(0, 0, 0, 0.05), 0 4px 6px -2px rgba(0, 0, 0, 0.025)',
+}
+}
+}
+}
+</script>
     <style>
         /* Custom Utilities for subtle textures */
         .bg-grid-pattern {
@@ -54,8 +56,8 @@
         }
 
         .hero-gradient {
-            background: linear-gradient(135deg, #f0fdfa 0%, #f8fafc 100%);
-        }
+background: linear-gradient(135deg, #0b1220 0%, #0b5ed7 100%);
+}
 
         /* Scroll Animation Utilities */
         .opacity-0 {
@@ -101,7 +103,6 @@
 </head>
 
 <body class="bg-brand-bg text-slate-700 font-sans antialiased selection:bg-brand-primary selection:text-white">
-
     <!-- Navigation -->
     <nav class="w-full bg-white/90 backdrop-blur-md border-b border-slate-200 fixed top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -156,12 +157,14 @@
                     class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-teal-50 border border-teal-100 text-brand-primary text-xs font-semibold uppercase tracking-wider mb-6">
                     <i class="fa-solid fa-certificate"></i> Industry-Led Initiative
                 </div>
-                <h1 class="font-serif text-4xl lg:text-5xl font-bold text-brand-dark leading-tight mb-6">
+               <h1 class="font-serif text-4xl lg:text-5xl font-bold text-white leading-tight mb-6">
+
                     Preparing Graduates for <br>
                     <span class="text-brand-primary italic">Real-World Industry</span>, <br>
                     Not Just Employment
                 </h1>
-                <p class="text-lg text-slate-600 mb-8 leading-relaxed max-w-2xl mx-auto">
+                <p class="text-lg text-slate-200 mb-8 leading-relaxed max-w-2xl mx-auto">
+
                     An industry-readiness initiative that helps students understand how real software projects work
                     inside companies.
                 </p>
